doc_files = files(
	'amitk.args',
	'amitk.hierarchy',
	'amitk.interfaces',
	'amitk.prerequisites',
	'amitk.signals',
	'amitk-docs.sgml',
	'amitk-overrides.txt',
	'theory.sgml',
)

ignore_hfiles = [
	'alignment_mutal_information.h',
	'alignment_procrustes.h',
	'amide_intl.h',
	'amitk_dial.h',
	'analysis.h',
	'dcmtk_interface.h',
	'fads.h',
	'image.h',
	'legacy.h',
	'libecat_interface.h',
	'libmdc_interface.h',
	'mpeg_encode.h',
	'pixmaps.h',
	'raw_data_import.h',
	'render.h',
	'tb_alignment.h	',
	'tb_crop.h',
	'tb_fads.h',
	'tb_filter.h',
	'tb_fly_through.h',
	'tb_math.h',
	'tb_profile.h',
	'tb_roi_analysis.h',
	'ui_common.h',
	'ui_gate_dialog.h',
	'ui_preferences_dialog.h',
	'ui_render.h',
	'ui_render_dialog.h',
	'ui_render_movie.h',
	'ui_series.h',
	'ui_study.h',
	'ui_study_cb.h',
	'ui_study_menus.h',
	'ui_time_dialog.h',
	'xml.h',
]

generated_docs = gnome.gtkdoc(
	'amide-docs',
	main_xml: 'amitk-docs.sgml',
	content_files: doc_files,
	ignore_headers: ignore_hfiles,
	dependencies: amide_deps,
	install_dir: get_option('datadir') / 'doc' / meson.project_name(),
	src_dir: [
		meson.project_source_root()/'src',
		meson.project_build_root()/'src',
	],
)