figs =
# figures/blah.png

docname = amide
lang = C
locale = C
omffile = amide-C.omf
entities = 			\
	basics.xml 		\
	filehandling.xml 	\
	importing.xml 		\
	rendering.xml 		\
	rois.xml 		\
	datasets.xml		\
	alignment.xml

include $(top_srcdir)/help/xmldocs.make

dist-hook: app-dist-hook

DISTCLEANFILES = *~


