figs = \
	figures/amide_main_window.png

docname = amide
lang = C
locale = C
omffile = amide-C.omf
entities = 			\
	basics.xml 		\
	data_sets.xml		\
	file_handling.xml       \
	introduction.xml        \
	rendering.xml 		\
	rois.xml 		\
	study.xml               \
	series.xml              \
	tools.xml 		


include $(top_srcdir)/help/xmldocs.make

dist-hook: app-dist-hook

DISTCLEANFILES = *~


