figdir = figures
docname = amide
lang = C
locale = C
omffile = amide-C.omf
entities = 			\
	basics.xml 		\
	data_sets.xml		\
	file_handling.xml       \
	introduction.xml        \
	rendering.xml 		\
	rois.xml 		\
	study.xml               \
	series.xml              \
	tools.xml 		


if SCROLLKEEPER_EXISTS

include $(top_srcdir)/help/xmldocs.make

dist-hook: app-dist-hook

endif

DISTCLEANFILES = *~


