figs = \
	figures/amide_main_window.png

docname = amide
lang = es
locale = es
omffile = amide-es.omf
entities = 			\
	basics.xml 		\
	data_sets.xml		\
	file_handling.xml       \
	introduction.xml        \
	rendering.xml 		\
	rois.xml 		\
	study.xml               \
	series.xml              \
	tools.xml 		


include $(top_srcdir)/help/xmldocs.make

dist-hook: app-dist-hook

DISTCLEANFILES = *~


